Second commit: README file added

--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,8 @@
 		<ul>
 			<li>Introduction to Computer Science </li>
 			<li>Data Structures </li>
-			<li>Mach Structure and Assembly Language Programming </li>
+			<li>Mach Structure and Assembly Language 
+			<br>Programming </li>
 			<li>Discrete Mathematics </li>
 			<li>Web Programming </li>
 			<li>Introduction to Algorithm </li>
